Fix collapsing

--- a/src/pages/thread/Comment/Comment.css
+++ b/src/pages/thread/Comment/Comment.css
@@ -75,3 +75,7 @@
   color: var(--usafa);
   margin-left: 15px;
 }
+
+.comment-hidden {
+  display: none;
+}
